--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -34,7 +34,11 @@ ul li a{
     font-size: 19px;
     margin-inline: 22px;
 }
-.fa-bars{
+ul li a:hover{
+    color: rgb(7, 59, 203);
+    border-bottom: 2px solid rgb(7, 59, 203);
+}
+#bar{
     display: none;
 }
 .logo{
@@ -47,5 +51,150 @@ ul li a{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 140px;
+    margin-top: 110px;
+}
+.mainText h1{
+    font-size: 70px;
+}
+.mainText h1 span{
+    color: blue;
+}
+.mainText h3{
+    font-size: 30px;
+}
+.mainText p{
+    font-size: 30px;
+}
+.mainText button{
+    width: 140px;
+    height: 40px;
+    background-color: blue;
+    font-size: 20px;
+    border: none;
+    margin-top: 24px;
+    color: white;
+
+}
+button:hover{
+    border: 2px solid blue;
+    background-color: transparent;
+    cursor: pointer;
+}
+.head{
+    text-align: center;
+    padding: 80px;
+}
+.head span{
+    color: rgb(7, 59, 203);
+}
+.about{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(51, 50, 50);
+    padding: 70px;
+}
+.about img{
+    width: 200px;
+    flex-wrap: wrap;
+    border-radius: 10%;
+    border: 4px solid rgb(7, 59, 203);
+    margin-inline: 55px;
+    size: 100px;
+}
+.aboutText p{
+    margin-top: 22px;
+}
+.aboutText h2 span{
+    color: rgb(7, 59, 203);
+}
+.aboutText p span{
+    color: rgb(209, 206, 206);
+}
+.aboutText h2{
+    font-size: 30px;
+}
+.service{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.card{
+    width: 250px;
+    padding: 22px;
+    background-color: rgb(51, 50, 50);
+    margin-inline: 20px;
+    border-radius: 5px;
+}
+.card p{
+    margin-top: 11px;
+}
+.card i{
+    font-size: 28px;
+}
+.myWork{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.workCard{
+    width: 300px;
+    height: 310px;
+    background-color: rgb(51, 50, 50);
+    border-radius: 5px;
+    margin-inline: 22px;
+    padding: 11px;
+}
+.workCard img{
+    width: 100%;
+    height: 100%;
+
+}
+.workCard p{
+    margin-top: 11px;
+}
+.workCard a{
+    text-decoration: none;
+    position: absolute;
+    margin-top: 20px;
+    padding: 6px 12px;
+    background-color: rgb(4, 76, 177);
+    color: white;
+}
+.contact{
+    width: 300px;
+    padding: 20px;
+    background-color: rgb(51, 50, 50);
+    margin: auto;
+}
+.contact input{
+    width: 90%;
+    padding: 5px;
+    font-size: 18px;
+    border: 1px solid white;
+    background-color: transparent;
+    color: white;
+    margin-top: 3px;
+}
+.contact p{
+    margin-top: 20px;
+}
+.contact button{
+    width: 90px;
+    height: 28px;
+    background-color: rgb(3, 163, 231);
+    color: white;
+    font-size: 17px;
+    border: none;
+    margin-top: 22px;
+}
+.footer{
+    display: flex;
+    justify-content: space-around;
+    padding: 55px;
+    margin-top: 65px;
+    background-color: rgb(51, 50, 50);
+}
+.text p{
+    margin-top: 12px;
 }
