--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -89,15 +89,16 @@ button:hover{
 }
 .about{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     background-color: rgb(51, 50, 50);
-    padding: 70px;
+    padding: 22px;
 }
 .about img{
-    width: 200px;
+    width: 250px;
     flex-wrap: wrap;
-    border-radius: 10%;
+    border-radius: 50%;
     border: 4px solid rgb(7, 59, 203);
     margin-inline: 55px;
     size: 100px;
@@ -125,6 +126,7 @@ button:hover{
     background-color: rgb(51, 50, 50);
     margin-inline: 20px;
     border-radius: 5px;
+    margin-top: 22px;
 }
 .card p{
     margin-top: 11px;
@@ -142,12 +144,13 @@ button:hover{
     height: 310px;
     background-color: rgb(51, 50, 50);
     border-radius: 5px;
-    margin-inline: 22px;
+    margin-inline: 20px;
     padding: 11px;
+    margin-top: 22px;
 }
 .workCard img{
     width: 100%;
-    height: 100%;
+    height: 200px;
 
 }
 .workCard p{
@@ -190,11 +193,62 @@ button:hover{
 }
 .footer{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     padding: 55px;
     margin-top: 65px;
     background-color: rgb(51, 50, 50);
 }
+.text{
+    margin-top: 20px;
+}
 .text p{
     margin-top: 12px;
+}
+
+@media screen and (max-width:1000px){
+    .main{
+        display: block;
+        text-align: center;
+        margin-top: 155px;
+
+    }
+}
+
+@media screen and (max-width:800px){
+    ul{
+        display: none;
+    }
+    .showData{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 23px;
+        background-color: rgb(51, 50, 50);
+        gap: 20px;
+        border-radius: 5px;
+        position: fixed;
+        top: 75px;
+        right: 3%;
+    }
+    #bar{
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+    }
+    
+}
+@media screen and (max-width:550px){
+    .mainText h1{
+        font-size: 36px;
+    }
+    .mainText h3{
+        font-size: 20px;
+    }
+    .mainText p{
+        font-size: 20px;
+    }
+    .main img{
+        width: 90%;
+    }
 }
